fix overflow on body so you cannot see mobile menu. add zindexing.

--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -33,7 +33,10 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
   font-family: "Manrope";
   background-color: var(--color-black-dark);
   color: var(--color-white-main);
